--- a/home.html
+++ b/home.html
@@ -425,7 +425,7 @@
             </div>
             <div class="copyright">
                <div class="container">
-                  <p>Copyright 2019 All Rights Reserved Design By Raghav</p>
+                  <p>Copyright 2019 All Rights Reserved</p>
                </div>
             </div>
          </div>
